// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack renders children with default gap 1`] = `
<View
  style={
    [
      {
        "alignItems": "stretch",
        "flexDirection": "column",
        "gap": 12,
        "justifyContent": "flex-start",
      },
      undefined,
    ]
  }
  testID="stack"
>
  <View
    testID="child-a"
  >
    <Text>
      A
    </Text>
  </View>
  <View
    testID="child-b"
  >
    <Text>
      B
    </Text>
  </View>
</View>
`;

exports[`Stack respects custom gap, align and justify 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "column",
        "gap": 24,
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
  testID="stack"
>
  <View>
    <Text>
      A
    </Text>
  </View>
  <View>
    <Text>
      B
    </Text>
  </View>
</View>
`;
